--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/banks/
+    - assets/images/fasilitas/
     - assets/images/categories/
     - assets/images/products/
     - assets/icons/
