--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   intl: ^0.19.0
   shared_preferences: ^2.2.3
   url_launcher: ^6.3.0
+  loading_animation_widget: ^1.2.1
 
 dev_dependencies:
   build_runner: ^2.4.8
