--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,11 +19,12 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.4 <4.0.0'
+  sdk: '>=3.5.3 <4.0.0'
 
 dependencies:
   badges: ^3.1.2
-  carousel_slider: ^4.2.1
+  carousel_slider: ^5.0.0
+  # carousel_slider: ^5.0.0
   cupertino_icons: ^1.0.6
   dartz: ^0.10.1
   dots_indicator: ^3.0.0
@@ -32,13 +33,13 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
-  flutter_local_notifications: ^16.3.2
+  flutter_local_notifications: ^17.2.2 
   flutter_slidable: ^3.0.1
   flutter_svg: ^2.0.9
   freezed_annotation: ^2.4.1
   go_router: ^13.0.1
   google_fonts: ^6.1.0
-  google_maps_flutter: ^2.7.0
+  google_maps_flutter: ^2.2.8
   http: ^1.2.1
   intl: ^0.19.0
   shared_preferences: ^2.2.3
