--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,23 +28,24 @@ dependencies:
   cupertino_icons: ^1.0.6
   dartz: ^0.10.1
   dots_indicator: ^3.0.0
-  firebase_core: ^2.32.0
-  firebase_messaging: ^14.9.4
+  firebase_core: ^3.5.0
+  firebase_messaging: ^15.1.2
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
-  flutter_local_notifications: ^17.2.2 
+  flutter_local_notifications: ^17.2.2
   flutter_slidable: ^3.0.1
   flutter_svg: ^2.0.9
   freezed_annotation: ^2.4.1
   go_router: ^13.0.1
   google_fonts: ^6.1.0
-  google_maps_flutter: ^2.2.8
+  google_maps_flutter: ^2.9.0
   http: ^1.2.1
   intl: ^0.19.0
   shared_preferences: ^2.2.3
   url_launcher: ^6.3.0
   loading_animation_widget: ^1.2.1
+  quickalert: ^1.1.0
 
 dev_dependencies:
   build_runner: ^2.4.8
