--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,15 @@ dependencies:
   url_launcher: ^6.3.0
   loading_animation_widget: ^1.2.1
   quickalert: ^1.1.0
+  pdf: ^3.11.1
+  path_provider: ^2.1.4
+  open_file: ^3.5.8
+  filter_list: ^1.0.3
+
+  # permission_handler: ^11.3.1
+
+
+
 
 dev_dependencies:
   build_runner: ^2.4.8
