--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   path_provider: ^2.1.4
   open_file: ^3.5.8
   filter_list: ^1.0.3
+  gif: ^2.3.0
 
   # permission_handler: ^11.3.1
 
