--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,38 +24,33 @@ environment:
 dependencies:
   badges: ^3.1.2
   carousel_slider: ^5.0.0
-  # carousel_slider: ^5.0.0
   cupertino_icons: ^1.0.6
   dartz: ^0.10.1
   dots_indicator: ^3.0.0
-  firebase_core: ^3.5.0
-  firebase_messaging: ^15.1.2
+  filter_list: ^1.0.3
+  firebase_core: ^3.8.0
+  firebase_messaging: ^15.1.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  flutter_launcher_icons: ^0.14.1
   flutter_local_notifications: ^17.2.2
   flutter_slidable: ^3.0.1
   flutter_svg: ^2.0.9
   freezed_annotation: ^2.4.1
+  gif: ^2.3.0
   go_router: ^13.0.1
   google_fonts: ^6.1.0
   google_maps_flutter: ^2.9.0
   http: ^1.2.1
   intl: ^0.19.0
+  loading_animation_widget: ^1.2.1
+  open_file: ^3.5.8
+  path_provider: ^2.1.4
+  pdf: ^3.11.1
+  quickalert: ^1.1.0
   shared_preferences: ^2.2.3
   url_launcher: ^6.3.0
-  loading_animation_widget: ^1.2.1
-  quickalert: ^1.1.0
-  pdf: ^3.11.1
-  path_provider: ^2.1.4
-  open_file: ^3.5.8
-  filter_list: ^1.0.3
-  gif: ^2.3.0
-
-  # permission_handler: ^11.3.1
-
-
-
 
 dev_dependencies:
   build_runner: ^2.4.8
@@ -64,6 +59,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   freezed: ^2.5.2
+
+flutter_launcher_icons:
+    android: "launcher_icon"
+    ios: true
+    image_path: "assets/logo.png"
+    min_sdk_android: 21 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -83,6 +84,9 @@ flutter:
     - assets/images/categories/
     - assets/images/products/
     - assets/icons/
+
+  
+  # android min sdk min:16, default 21
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
